--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dayjs": "^1.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-paginate": "^8.1.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "tabler-icons-react": "^1.43.0",
