--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@mantine/dates": "^4.1.2",
     "@mantine/hooks": "^4.1.2",
     "@mantine/next": "^4.1.2",
+    "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "dayjs": "^1.11.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
     "react-paginate": "^8.1.2",
+    "react-redux": "^8.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "tabler-icons-react": "^1.43.0",
