--- a/server/confi.env
+++ b/server/confi.env
@@ -1,2 +1,2 @@
-ATLAS_URI=mongodb+srv://test:testpass@mern.7gubi.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+ATLAS_URI=mongodb+srv://test:testpass@mern.7gubi.mongodb.net/movies_database?retryWrites=true&w=majority
 PORT=5000
