--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "redux-persist": "^6.0.0",
     "tabler-icons-react": "^1.46.0",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
