--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,11 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-
-  ],
-  "start_url": ".",
+  "background_color": "#ffffff",
   "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "icons": [],
+  "name": "MovieLog",
+  "short_name": "MovieLog",
+  "start_url": ".",
+  "theme_color": "#000000"
 }
