--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@testing-library/user-event": "^14.1.1",
     "axios": "^0.27.0",
     "dayjs": "^1.11.1",
+    "javascript-time-ago": "^2.3.13",
     "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
