--- a/client/package.json
+++ b/client/package.json
@@ -20,14 +20,17 @@
     "@mantine/next": "^4.1.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
-    "@mui/material": "^5.6.3",
+    "@mui/lab": "^5.0.0-alpha.80",
+    "@mui/material": "^5.6.4",
     "@reduxjs/toolkit": "^1.8.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
+    "@typescript-eslint/parser": "^5.22.0",
     "axios": "^0.27.0",
     "dayjs": "^1.11.1",
     "javascript-time-ago": "^2.3.13",
+    "mui": "0.0.1",
     "process": "^0.11.10",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
@@ -38,6 +41,7 @@
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
     "tabler-icons-react": "^1.46.0",
+    "typescript": "^4.6.4",
     "url": "^0.11.0",
     "web-vitals": "^2.1.4"
   },
