--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "mui": "0.0.1",
     "process": "^0.11.10",
     "react": "^18.0.0",
+    "react-confirm-alert": "^3.0.2",
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
     "react-paginate": "^8.1.3",
