--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "@mantine/next": "^4.1.5",
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.8.2",
     "@mui/lab": "^5.0.0-alpha.80",
     "@mui/material": "^5.8.0",
     "@reduxjs/toolkit": "^1.8.1",
