--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "axios": "^0.27.0",
     "dayjs": "^1.11.1",
     "javascript-time-ago": "^2.3.13",
+    "lodash": "^4.17.21",
     "mui": "0.0.1",
     "process": "^0.11.10",
     "react": "^18.0.0",
