--- a/client/package.json
+++ b/client/package.json
@@ -12,42 +12,38 @@
     ]
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mantine/core": "^6.0.19",
-    "@mantine/dates": "^6.0.19",
+    "@mantine/dates": "^6.0.21",
     "@mantine/hooks": "^6.0.19",
-    "@mantine/next": "^6.0.19",
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@mui/icons-material": "^5.14.3",
+    "@mantine/next": "^6.0.21",
+    "@mui/icons-material": "^5.16.0",
     "@mui/lab": "^5.0.0-alpha.140",
-    "@mui/material": "^5.14.5",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@testing-library/jest-dom": "^6.0.1",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@typescript-eslint/parser": "^6.4.0",
-    "axios": "^1.4.0",
-    "dayjs": "^1.11.9",
-    "javascript-time-ago": "^2.5.9",
+    "@mui/material": "^5.16.0",
+    "@react-oauth/google": "^0.12.1",
+    "@reduxjs/toolkit": "^1.9.7",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^14.3.1",
+    "@testing-library/user-event": "^14.5.2",
+    "axios": "^1.7.2",
+    "dayjs": "^1.11.11",
+    "javascript-time-ago": "^2.5.10",
     "lodash": "^4.17.21",
     "mui": "0.0.1",
     "process": "^0.11.10",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-confirm-alert": "^3.0.6",
-    "react-dom": "^18.2.0",
-    "react-google-login": "^5.2.2",
+    "react-dom": "^18.3.1",
     "react-paginate": "^8.2.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
+    "react-redux": "^8.1.3",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "redux-persist": "^6.0.0",
-    "sass": "^1.66.1",
+    "sass": "^1.77.6",
     "tabler-icons-react": "^1.56.0",
-    "typescript": "^5.1.6",
-    "url": "^0.11.1",
-    "web-vitals": "^3.4.0"
+    "url": "^0.11.3",
+    "web-vitals": "^3.5.2"
   },
   "eslintConfig": {
     "extends": [
