add: added vercel json

--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,8 +1,15 @@
 {
-  "rewrites": [
+  "builds": [
     {
-      "destination": "/api",
-      "source": "/(.*)"
+      "src": "./index.js",
+      "use": "@vercel/node"
     }
-  ]
+  ],
+  "routes": [
+    {
+      "dest": "/",
+      "src": "/(.*)"
+    }
+  ],
+  "version": 2
 }
